# ML-FLOODZY

./: .coverage  .dockerignore  .env.local  Dockerfile  HOW_TO_APPLY_DELTA.md  README.md  RETRAINING_STRATEGY.md  check_cuda.py  coverage.xml  get_flood_data.py  pyproject.toml  requirements.txt  test_floodzy_eval.py  train_xgb_cuda_full.py
.github/workflows/: ci.yml  monitor.yml
.hypothesis/constants/: 09559ea10c14e6f2  5c59075804c4ca0f  990fd7a16d45a4ed  a94fb763c6e16bf8  b5cd26d046a12b8e  da39a3ee5e6b4b0d
analysis/: eval_temporal.py
api/: main.py
artifacts/: xgb_floodzy_model.json  xgb_floodzy_national_v2.json  xgb_floodzy_national_v2_cuda.json
data/: sample_data.csv
data/processed/: floodzy_eval_2023.csv  floodzy_eval_2025.csv  floodzy_new_train.csv  floodzy_train_ready.csv  floodzy_train_ready_combined.csv
ml/: APPLY_PATCH.md  analyze_feature_importance.py  check_prediction_stability.py  detect_drift.py  export_report_to_pdf_final.py  feature_importance.py  fix_eval_features.py  generate_feature_report.py  generate_temporal_report.py  inference.py  ml_config.py  predict_xgb.py  schemas.py  split.py  split_eval_datasets.py  train_lr.py  train_rf.py  train_rf_grid.py  train_xgb.py  train_xgb_national.py  validate_temporal_performance.py
reports/feature_importance/: Feature_Importance_Floodzy_Report.md  shap_feature_importance_values.csv
reports/temporal_validation/: Laporan Analisis Feature Importance.md  (+2 more)
tests/: test_api.py  test_features.py  test_interactions.py  test_interactions_tri.py  test_monotonic.py  test_schema_property.py
